--- a/tareas/templates/tarea/lista.html
+++ b/tareas/templates/tarea/lista.html
@@ -18,6 +18,7 @@
           <th>Vigente</th>
           <th>Fecha creación</th>
           <th>Fecha límite</th>
+          <th>Acciones</th>
         </tr>
       </thead>
       <tbody>
@@ -34,6 +35,10 @@
               {% else %}
                 —
               {% endif %}
+            </td>
+            <td>
+              <a href="{% url 'tareas:editar' tarea.id %}">Editar</a> |
+              <a href="{% url 'tareas:eliminar' tarea.id %}">Eliminar</a>
             </td>
           </tr>
         {% endfor %}
